# badami

./: .gitignore  CHECKLIST-2.md  README.md  crash.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api.rs  credential.rs  credentials.rs  db.rs  db_connection.rs  db_data.rs  db_schema.rs  db_transfer.rs  file_watch.rs  ftp.rs  mod.rs  password_gen.rs  session_manager.rs  sftp.rs  ssh.rs  totp.rs  vault.rs
src/components/: OnboardingDialog.tsx
src/components/ai/: AiChat.tsx
src/components/api/: ApiSidebar.tsx  CodeEditor.tsx  CollectionItem.tsx  CollectionVariablesEditor.tsx  CredentialPicker.tsx  EnvironmentEditor.tsx  FolderItem.tsx  (+8 more)
src/db/: client.ts  libsql-dialect.ts
src/hooks/: useAiChat.ts  useApiCollections.ts  useApiHistory.ts  useApiRequest.ts  useCredentials.ts  useDbConnection.ts  useDbSchema.ts  useDbTransfer.ts  useEnvironment.ts  useErDiagram.ts  useExpiryCheck.ts  useFileManager.ts  useMasterPassword.ts  useOpenRouterModels.ts  usePasswordGenerator.ts  usePlanning.ts  usePomodoro.ts  useProjects.ts  useQueryEditor.ts  useReminderChecker.ts  useSchemaManager.ts  useSshSession.ts  useSync.ts  useTasks.ts  useTotp.ts  useVault.ts
src/lib/: aiTools.ts  credentialTypes.ts  curlExporter.ts  dateUtils.ts  ddlGenerator.ts  editorLanguage.ts  erLayoutEngine.ts  fileSystem.ts  osOpen.ts  postmanImporter.ts  recurrence.ts  serverErrors.ts  sqlDialect.ts  terminalThemes.ts
src/routes/: __root.tsx  search.tsx  today.tsx
src/stores/: apiStore.ts  appTabStore.ts  credentialStore.ts  dbStore.ts  planningStore.ts  pomodoroStore.ts  projectStore.ts  serverStore.ts  settingsStore.ts  syncStore.ts  taskStore.ts
src/types/: api.ts  credential.ts  db.ts  planning.ts  project.ts  server.ts  task.ts
(+146 files in other folders)
